--- a/cours/01_prise_en_main/01_premiers_pas.ipynb
+++ b/cours/01_prise_en_main/01_premiers_pas.ipynb
@@ -1650,6 +1650,27 @@
     "n = str(3 ** 57)\n",
     "print(n[27])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 1\n",
+    "for i in range(0, 3):\n",
+    "    for j in range(0,j+1):\n",
+    "        a *= 3\n",
+    "print(a)"
+   ]
   }
  ],
  "metadata": {
