--- a/cours/06_listes/06_listes.ipynb
+++ b/cours/06_listes/06_listes.ipynb
@@ -322,6 +322,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(liste[4::-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -433,44 +442,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[23, 19, 13, 7, 3]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "liste[::-2]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "liste[::11]"
    ]
@@ -538,22 +525,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "range(1, 10)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Générer une liste d'entiers de 1 à 9\n",
     "print(list(range(1, 10)))\n",
@@ -573,21 +551,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 4, 8, 12, 16, 20, 24, 28, 32, 36]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = int(input(\"Donner un entier\"))\n",
     "\n",
@@ -791,21 +761,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Paris', 'Lisbonne', 'Berlin', 'Madrid', 'Athènes', 'Zagreb', 'Rome']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "capitales = [\"Paris\", \"Berlin\", \"Madrid\", \"Athènes\", \"Zagreb\", \"Rome\"]\n",
     "capitales.insert(1, \"Lisbonne\")\n",
@@ -962,22 +924,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5\n",
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nombres = [1,3,3,6,2,5,7,2,3,4,3,2,3]\n",
     "print(nombres.count(3))\n",
@@ -1000,22 +953,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4]\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "liste = [1, 2, 3]\n",
     "liste2 = liste.append(4)\n",
@@ -1076,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -1168,21 +1112,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 5, 7, 14]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "L = [3, 5, 1, 7, 14, 2]\n",
     "L2 = sorted(L)\n",
@@ -1202,23 +1138,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 5, 7, 14]\n",
-      "[14, 7, 5, 3, 2, 1]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "L = [3, 5, 1, 7, 14, 2]\n",
     "L2 = sorted(L, reverse=False)\n",
     "print(L2)\n",
     "\n",
@@ -1579,23 +1507,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "False\n",
-      "True\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "nombres = [1, 3, 5, 7, 9, 11]\n",
     "print(3 in nombres)\n",
@@ -1616,24 +1534,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "4 not in nombres"
    ]
@@ -1721,23 +1628,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3]\n",
-      "[4, 5]\n",
-      "7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "L = [[1, 2, 3], [4, 5], [6, 7, 8, 9]]\n",
     "print(L[0])\n",
@@ -1824,21 +1721,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = 3\n",
     "n = 4\n",
@@ -1859,21 +1748,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 1, 0], [0, 0, 1, 0], [0, 0, 1, 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "L[0][2] = 1\n",
     "print(L)"
@@ -1905,21 +1786,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 0, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m = 3\n",
     "n = 4\n",
@@ -1929,21 +1802,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[0, 0, 1, 0], [0, 0, 0, 0], [0, 0, 0, 0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "L[0][2] = 1\n",
     "print(L)"
@@ -1964,24 +1829,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 2 2\n",
-      "0 1 2 2\n",
-      "0 0 1 2\n",
-      "0 0 0 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "L = [[0] * 4 for i in range(4)]\n",
     "for i in range(4) :\n",
@@ -2049,17 +1903,6 @@
     "  * si le tirage n'est pas valide, recommencer.\n",
     "  "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2310,17 +2153,6 @@
    "execution_count": null,
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "slideshow": {
      "slide_type": "notes"
     }
    },
@@ -2531,13 +2363,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Gaëtan': 12, 'Laure': 9, 'Kenza': 17, 'Gabriel': 14, 'Anne': 15}\n",
+      "{\"L'auberge du Goëllo\": 22170, 'Café Menilmontant': 75011, 'Mamie Bigoude': 17000}\n"
+     ]
+    }
+   ],
    "source": [
     "dico_notes = {\"Gaëtan\" : 14, \"Laure\" : 9, \"Kenza\" : 17, \"Gabriel\" : 14}\n",
     "\n",
