--- a/exercises/TD04_listes/04_listes.ipynb
+++ b/exercises/TD04_listes/04_listes.ipynb
@@ -710,15 +710,8 @@
     "        liste = [a[i] + b[i] for i in range(len(a))]\n",
     "        return liste\n",
     "\n",
-    "print(longueur([1,7],[8,9]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(longueur([1,7],[8,9]))\n",
+    "\n",
     "import random\n",
     "def plan_jour(n):\n",
     "    j = []\n",
@@ -739,18 +732,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<generator object somme.<locals>.<genexpr> at 0x0000019BB50BD6D0>]\n"
+     ]
+    }
+   ],
    "source": [
     "#pas fini\n",
     "def somme(n):\n",
     "    l = []\n",
-    "    for i in range(n):\n",
-    "        l.append(2**i + for i in range)\n",
+    "    l.append(2**i for i in range(n))\n",
+    "    l = \n",
     "    return l\n",
-    "   # l = [2**i for i in range(n)]\n",
-    "somme(4)"
+    "print(somme(4))"
    ]
   },
   {
@@ -775,20 +775,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[8, 4]"
-      ]
-     },
-     "execution_count": 221,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#sujet 26\n",
     "def pair():\n",
@@ -800,32 +789,28 @@
     "        else:\n",
     "            break\n",
     "    return l\n",
-    "pair()\n",
+    "print(pair())\n",
     "\n",
     "#morpion\n",
-    "def verifie_ligne(morpion,n):\n",
-    "    for i in range(3):\n",
-    "        if l :\n",
+    "def verifie_ligne(grille,n):\n",
+    "    for line in grille:\n",
+    "        print(line)\n",
+    "    print(\"line:\", n)\n",
+    "    if grille[n-1] == [0,0,0] :\n",
     "        return 0\n",
-    "    elif :\n",
+    "    elif grille[n-1] == [1,1,1]:\n",
     "        return 1\n",
     "    else: \n",
-    "        return -1"
+    "        return -1\n",
+    "\n",
+    "print(verifie_ligne([[1,0,1],[0,0,0],[0,1,1]], 3))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2, 3, 2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#sujet 20\n",
     "def divise(l1,l2):\n",
@@ -841,17 +826,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 'f'], [2, 's'], [2, 'e']]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#sujet 6\n",
     "def sup(l1,n):\n",
@@ -871,6 +848,60 @@
     "            l.remove(i)\n",
     "    return l\n",
     "print(occurence(\"fesse\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sujet 3\n",
+    "def fact(l1,l2):\n",
+    "    l1 = []\n",
+    "    a = (int(input(\"nombre de termes de la liste\")\n",
+    "    for i in range(2):\n",
+    "        l1.append(int(input(\"nombre\")))\n",
+    "    l2 = [i]\n",
+    "    #je sais pas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plusOne(ma_liste):\n",
+    "    a = len(ma_liste)\n",
+    "    l = [ma_liste[i]+1 for i in range(a)]\n",
+    "    return l\n",
+    "plusOne([1,9,8,224])\n",
+    "\n",
+    "def multiplication(n):\n",
+    "    l = [n*i for i in range(n+1)]\n",
+    "    print(l)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sujet 14\n",
+    "def diviseur(n):\n",
+    "    l = []\n",
+    "    for i in range(1,n+1):\n",
+    "        if n % i == 0:\n",
+    "            l.append(i)\n",
+    "    return l \n",
+    "print(diviseur(10))\n",
+    "\n",
+    "\n",
+    "l = [[0,a,b],[0,c,d],[0,e,f]]\n",
+    "def remplace(l):\n",
+    "    "
    ]
   }
  ],
