--- a/cours/03_structures_iteratives/03_structures_iteratives.ipynb
+++ b/cours/03_structures_iteratives/03_structures_iteratives.ipynb
@@ -760,13 +760,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 est impair\n",
+      "Terminé\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(1, 21) :\n",
     "    if i % 2 == 0 :\n",
