--- a/exercises/TD05_gui/05_gui.ipynb
+++ b/exercises/TD05_gui/05_gui.ipynb
@@ -42,6 +42,66 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "CANVAS_WIDTH, CANVAS_HEIGHT = 600, 400\n",
+    "\n",
+    "root = Tk()\n",
+    "\n",
+    "canvas = Canvas(root, width = CANVAS_WIDTH, height = CANVAS_HEIGHT)\n",
+    "\n",
+    "    # Début de votre code\n",
+    "x0 = 100\n",
+    "x1 = CANVAS_WIDTH - 100\n",
+    "y = CANVAS_HEIGHT / 2\n",
+    "canvas.create_line(x0, y, x1, y)\n",
+    "canvas.create_oval(x0 - 50, y + 50, x0 + 50, y - 50)\n",
+    "canvas.create_oval(x1 - 50, y + 50, x1 + 50, y - 50)\n",
+    "canvas.create_oval((x0 + x1) / 2 - 50, y + 50, (x0 + x1) / 2 + 50, y - 50)\n",
+    "    \n",
+    "    # Fin de votre code\n",
+    "\n",
+    "canvas.pack()\n",
+    "root.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from tkinter import *\n",
+    "import tkinter as tk\n",
+    "\n",
+    "CANVAS_WIDTH, CANVAS_HEIGHT = 600, 400\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    root = tk.Tk()\n",
+    "\n",
+    "    canvas = tk.Canvas(root, width = CANVAS_WIDTH, height = CANVAS_HEIGHT)\n",
+    "\n",
+    "    # Début de votre code\n",
+    "    x0 = 100\n",
+    "    x1 = CANVAS_WIDTH - 100\n",
+    "    y = CANVAS_HEIGHT / 2\n",
+    "    canvas.create_line(x0, y, x1, y)\n",
+    "    canvas.create_oval(x0 - 50, y + 50, x0 + 50, y - 50)\n",
+    "    canvas.create_oval(x1 - 50, y + 50, x1 + 50, y - 50)\n",
+    "    canvas.create_oval((x0 + x1) / 2 - 50, y + 50, (x0 + x1) / 2 + 50, y - 50)\n",
+    "    \n",
+    "    # Fin de votre code\n",
+    "\n",
+    "    canvas.pack()\n",
+    "    root.mainloop()\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -280,7 +340,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
