--- a/exercises/TD04_listes/04_listes.ipynb
+++ b/exercises/TD04_listes/04_listes.ipynb
@@ -732,45 +732,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<generator object somme.<locals>.<genexpr> at 0x0000019BB50BD6D0>]\n"
-     ]
-    }
-   ],
-   "source": [
-    "#pas fini\n",
-    "def somme(n):\n",
-    "    l = []\n",
-    "    l.append(2**i for i in range(n))\n",
-    "    l = \n",
-    "    return l\n",
-    "print(somme(4))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#pas fini\n",
-    "def matrice_carre():\n",
+    "#sujet 21\n",
+    "def somme(n):\n",
     "    l = []\n",
-    "    carre = int(input(\"Quelle est la taille de la matrice\"))\n",
-    "    for i in range(carre):\n",
-    "        for j in range(carre):\n",
-    "            ligne = int(input(\"Quels sont les chiffres de cette ligne\"))\n",
-    "            if ligne == int(ligne):\n",
-    "                l.append(ligne)\n",
-    "    for i in l:\n",
-    "        print(' '.join([str(j) for j in i]))\n",
-    "matrice_carre()"
+    "    a = [2**i for i in range(n)]\n",
+    "    for j in range(1, n+1):\n",
+    "        l.append(sum(a[:j]))\n",
+    "    return l\n",
+    "print(somme(4))\n",
+    "\n",
+    "def matrice_carre(tai6lle):\n",
+    "    l = []\n",
+    "    matrice = [[0]*taille for _ in range(taille)]\n",
+    "    for i in range(taille):\n",
+    "        for j in range(taille):\n",
+    "            chiffre = int(input(\"valeur ?\"))\n",
+    "            if chiffre == int(chiffre):\n",
+    "                matrice[i][j] = chiffre\n",
+    "    return matrice\n",
+    "matrice_carre(3)"
    ]
   },
   {
@@ -802,8 +786,7 @@
     "        return 1\n",
     "    else: \n",
     "        return -1\n",
-    "\n",
-    "print(verifie_ligne([[1,0,1],[0,0,0],[0,1,1]], 3))\n"
+    "print(verifie_ligne([[1,0,1],[0,0,0],[0,1,1]], 3))"
    ]
   },
   {
@@ -818,10 +801,21 @@
     "    l = tuple([l1[i]//l2[i] for i in range(len(l1))])\n",
     "    return l\n",
     "print(divise([10,6,8], [5,2,4]))\n",
-    "\n",
+    "    \n",
+    "import time\n",
     "def time_func(func):\n",
-    "    import time\n",
-    "    \n"
+    "    start = time.time()\n",
+    "    func\n",
+    "    end = time.time()\n",
+    "    temps = end - start\n",
+    "    print(\"Le temps d'exécution du programme est de\", temps, \"secondes\")\n",
+    "time_func(time.sleep(3))\n",
+    "\n",
+    "#start = time.time()\n",
+    "#time.sleep(3)\n",
+    "#end = time.time()\n",
+    "#temps = end - start\n",
+    "#print(\"Le temps d'exécution du programme est de\", temps, \"secondes\")\n"
    ]
   },
   {
@@ -837,7 +831,7 @@
     "        if l1[i] > n:\n",
     "            compteur += 1\n",
     "    return compteur\n",
-    "sup([4,7,10,45,68], 40)\n",
+    "print(sup([4,7,10,45,68], 40))\n",
     "\n",
     "def occurence(c):\n",
     "    l = []\n",
@@ -847,7 +841,7 @@
     "        if l.count(i) >= 2:\n",
     "            l.remove(i)\n",
     "    return l\n",
-    "print(occurence(\"fesse\"))"
+    "print(occurence(\"informatique\"))"
    ]
   },
   {
@@ -857,13 +851,16 @@
    "outputs": [],
    "source": [
     "#sujet 3\n",
-    "def fact(l1,l2):\n",
-    "    l1 = []\n",
-    "    a = (int(input(\"nombre de termes de la liste\")\n",
-    "    for i in range(2):\n",
-    "        l1.append(int(input(\"nombre\")))\n",
-    "    l2 = [i]\n",
-    "    #je sais pas"
+    "def fact(l1):\n",
+    "    l2 = []\n",
+    "    f = 1\n",
+    "    for i in l1:\n",
+    "        f = 1\n",
+    "        for j in range(1,i+1):\n",
+    "           f *=j\n",
+    "        l2.append(f)\n",
+    "    return l2\n",
+    "print(fact([1,2,5,3]))"
    ]
   },
   {
@@ -872,15 +869,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#sujet 19\n",
     "def plusOne(ma_liste):\n",
     "    a = len(ma_liste)\n",
     "    l = [ma_liste[i]+1 for i in range(a)]\n",
     "    return l\n",
     "plusOne([1,9,8,224])\n",
     "\n",
-    "def multiplication(n):\n",
-    "    l = [n*i for i in range(n+1)]\n",
-    "    print(l)"
+    "def verifie_colonne(grille, n):\n",
+    "    l = [grille[i][n-1] for i in range(3)]\n",
+    "    if l == [0,0,0]:\n",
+    "        return 0\n",
+    "    elif l == [1, 1, 1]:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return -1\n",
+    "verifie_colonne([[0,1,0], [0,0,0], [1,0,0]], 2)"
    ]
   },
   {
@@ -896,12 +900,218 @@
     "        if n % i == 0:\n",
     "            l.append(i)\n",
     "    return l \n",
-    "print(diviseur(10))\n",
+    "print(diviseur(10))   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sujet 2\n",
+    "def multi(n):\n",
+    "    print(\"x\", end=\" \")\n",
+    "    for i in range(n+1):\n",
+    "        print(i, end=\" \")\n",
+    "    print()\n",
+    "    for j in range(0,n+1):\n",
+    "        print(j, end=\" \")\n",
+    "        for h in range(n+1):\n",
+    "            print(h*j, end =\" \")\n",
+    "        print()\n",
+    "multi(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sujet 8\n",
+    "def inter(l1, l2):\n",
+    "    l3= []\n",
+    "    for i in range(len(l1)):\n",
+    "        if l1[i] in l2:\n",
+    "            l3.append(l1[i])\n",
+    "    return l3\n",
+    "print(inter([2, 7, 14, 5], [4, 8, 7]))\n",
     "\n",
+    "def somme_colonne(l):\n",
+    "    l1 = []\n",
+    "    l2 = []\n",
+    "    a = len(l)\n",
+    "    for i in range (a):\n",
+    "        for j in range(a):\n",
+    "            l2.append(l[i][j])\n",
+    "    for h in range(a):\n",
+    "        b = sum(l2[h::a])\n",
+    "        l1.append(b)\n",
+    "        b = 0\n",
+    "    return l1\n",
+    "somme_colonne(([1,5,4], [4,5,3], [8,8,5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inverse(n):\n",
+    "    l = []\n",
+    "    for i in range(n,0,-1):\n",
+    "        l.append(i)\n",
+    "    return l\n",
+    "print(inverse(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def total_colonnes(mat):\n",
+    "    l = []\n",
+    "    l1 = []\n",
+    "    a = len(mat)\n",
+    "    b = len(mat[0])\n",
+    "    for i in range(a):\n",
+    "        for j in range(b):\n",
+    "            l.append(mat[i][j])        #création liste avce toutes les valeurs\n",
+    "    for h in range(b):                 \n",
+    "        c = sum(l[h::b])\n",
+    "        l1.append(c)                   #l1 = sous liste avec les sommes\n",
+    "        c = 0\n",
+    "    for i in range(a):\n",
+    "        for j in range(b):\n",
+    "            print(mat[i][j], end = \" \")\n",
+    "        print()\n",
+    "    for i in range(len(l1)):\n",
+    "        print(l1[i], end=\" \")\n",
+    "print(total_colonnes(([1,3,2],[6,0,4], [5,2,8])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def petit(l):\n",
+    "    l.sort()\n",
+    "    return l[1]\n",
+    "petit([4,8,78,5,9])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def somme_matrice(mat1, mat2):\n",
+    "    if len(mat1) != len(mat2) or len(mat1[0]) != len(mat2[0]):\n",
+    "        return \n",
+    "    l = []\n",
+    "    m = len(mat1)\n",
+    "    n = len(mat1[0])\n",
+    "    for i in range(m):\n",
+    "        for j in range(n):\n",
+    "            a = sum((mat1[i][j], mat2[i][j]))\n",
+    "            l.append(a)\n",
+    "            a = 0\n",
+    "    for i in range(n,len(l)+1,n):\n",
+    "        b = l[i-n:i]\n",
+    "        for c in b:\n",
+    "            print(c, end=\" \")\n",
+    "        print()\n",
     "\n",
-    "l = [[0,a,b],[0,c,d],[0,e,f]]\n",
+    "somme_matrice(([1,3], [1,0], [1, 2]), ([0,0], [7,5], [2,1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import random\n",
+    "def sudoku():\n",
+    "    L = []\n",
+    "    while len(L)<4:\n",
+    "        a = random.randint(1,4)\n",
+    "        if a in L:\n",
+    "            continue\n",
+    "        else: \n",
+    "            L.append(a)\n",
+    "    print()\n",
+    "    L1 = []\n",
+    "    for j in range(3):\n",
+    "        for i in range(4):\n",
+    "            while len(L1)<4:\n",
+    "                a = random.randint(1,4)\n",
+    "                if a in L1:\n",
+    "                    continue\n",
+    "                else: \n",
+    "                    print(a, end=\" \")\n",
+    "                    L1.append(a)\n",
+    "                    if L1[i] == L[i]:\n",
+    "                        L1.remove(a)\n",
+    "sudoku()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "def sudoku(): \n",
+    "    l1 = [] \n",
+    "    L = []\n",
+    "    while len(L)<4:\n",
+    "        a = random.randint(1,4)\n",
+    "        if a in L:\n",
+    "            continue\n",
+    "        else: \n",
+    "            L.append(a)\n",
+    "    l1.append(L)\n",
+    "    print(l1)\n",
+    "    L = []\n",
+    "    for i in range(3):\n",
+    "        while len(L)<4:\n",
+    "            a = random.randint(1,4)\n",
+    "            if a in L:\n",
+    "                continue\n",
+    "            else: \n",
+    "                L.append(a)\n",
+    "        print(L)\n",
+    "        for j in range(3):\n",
+    "            for h in range(4):\n",
+    "                if L[h] == l1[j][h]:\n",
+    "                    L.remove(a)\n",
+    "        l1.append(L)\n",
+    "        L = []\n",
+    "    print(l1)\n",
+    "sudoku()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = [[0,0,0],[0,0,0],[0,0,0]]\n",
     "def remplace(l):\n",
-    "    "
+    "    for i in range(5):\n",
+    "        for j in range(3):\n",
+    "            for h in range(3):"
    ]
   }
  ],
