--- a/cours/07_interface_graphique/07_gui.ipynb
+++ b/cours/07_interface_graphique/07_gui.ipynb
@@ -1099,13 +1099,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tu as appuyé sur la touche a\n",
+      "Tu as relâché la touche a\n",
+      "Tu as appuyé sur la touche a\n",
+      "Tu as relâché la touche a\n",
+      "Tu as appuyé sur la touche a\n",
+      "Tu as relâché la touche a\n",
+      "Tu as appuyé sur la touche a\n",
+      "Tu as relâché la touche a\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "\n",
