--- a/cours/07_interface_graphique/07_gui.ipynb
+++ b/cours/07_interface_graphique/07_gui.ipynb
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "-"
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -1098,29 +1098,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
+   "cell_type": "markdown",
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Tu as appuyé sur la touche a\n",
-      "Tu as relâché la touche a\n",
-      "Tu as appuyé sur la touche a\n",
-      "Tu as relâché la touche a\n",
-      "Tu as appuyé sur la touche a\n",
-      "Tu as relâché la touche a\n",
-      "Tu as appuyé sur la touche a\n",
-      "Tu as relâché la touche a\n"
-     ]
+   "source": [
+    "**Format des événements**\n",
+    "\n",
+    "---\n",
+    "L'utilisation de la méthode `.bind()` nécessite de connaître le code associé aux événements. Par exemple, dans\n",
+    "```python\n",
+    "canvas.bind(\"<Button-1>\", affichage)\n",
+    "```\n",
+    "`<Button-1>` désigne un clic gauche de la souris.\n",
+    "\n",
+    "Quelques événements standards:\n",
+    "* `<Button-i>`: clic souris gauche si i vaut 1, central si i vaut 2 et droite si i vaut 3\n",
+    "* `<ButtonRelease-i>`: relâchement d'un bouton de la souris (i vaut 1, 2 ou 3 comme ci-dessus)\n",
+    "* `<KeyPress-i>`: touche `i` enfoncée\n",
+    "* `<KeyRelease-i>`: touche `i` relachée\n",
+    "* pleins d'autres exemples [ici](http://effbot.org/tkinterbook/tkinter-events-and-bindings.htm#events)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "import tkinter as tk\n",
     "\n",
@@ -1204,26 +1214,6 @@
    },
    "source": [
     "**Remarque**: le programme fonctionne pour les touches correspondant à des caractères uniquement."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "**Création de compte à rebours avec la méthode `.after()`**\n",
-    "\n",
-    "---\n",
-    "\n",
-    "C'est une méthode commune à tous les widgets:\n",
-    "```python\n",
-    "widget.after(delai, fonction)\n",
-    "```\n",
-    "* `delai`: est la durée en ms avant d'appeler la fonction\n",
-    "* `fonction`: est la fonction appelée"
    ]
   },
   {
@@ -1428,11 +1418,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -1454,7 +1439,6 @@
     "    else:\n",
     "        canvas.delete(cercle)\n",
     "    canvas.after(1000, dessine_efface)\n",
-    "        \n",
     "    \n",
     "racine = tk.Tk() # Création de la fenêtre racine\n",
     "canvas = tk.Canvas(racine, bg=\"red\", height=500, width=500)\n",
