--- a/exercises/TD04_listes/04_listes.ipynb
+++ b/exercises/TD04_listes/04_listes.ipynb
@@ -1117,48 +1117,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "[0, 3, 0, 3, 0, 3, 0, 3, 0, 3, 0, 3]\n",
+      "[[0, 3], [0, 3], [0, 3], [0, 3], [0, 3], [0, 3]]\n"
+     ]
+    }
+   ],
    "source": [
-    "grille = []\n",
-    "for i in range(7):\n",
-    "    for j in range(6):\n",
-    "        \n",
+    "fic = open(\"sauvegarde.txt\", \"w\")\n",
+    "for i in range(6):\n",
+    "    fic.write(str([0,3]) + \"\\n\")\n",
+    "fic.close() \n",
+    "\n",
+    "grille=[]\n",
+    "fic = open(\"sauvegarde.txt\", \"r\")\n",
+    "while True:\n",
+    "    ligne = fic.readline()\n",
+    "    if ligne == \"\":\n",
+    "        break\n",
+    "    for i in ligne:\n",
+    "        if i ==\"3\" or i ==\"0\":\n",
+    "            grille.append(int(i))\n",
+    "l_int = []\n",
+    "print(grille)\n",
+    "for i in range(6):\n",
+    "    l_int.extend([[grille[0], grille[1]]])\n",
+    "    for k in range(2):\n",
+    "        del grille[0]\n",
+    "print(l_int)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[0]*7"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'list' object cannot be interpreted as an integer",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_9988/2433442810.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0ml\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m8\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0ml\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[1;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m         \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mj\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'list' object cannot be interpreted as an integer"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0, 5], [9, 8], [8, 6]]\n"
      ]
     }
    ],
    "source": [
-    "l = [[0,8,7], [9,0]]\n",
-    "for i in l:\n",
-    "    for j in range(i):\n",
-    "        print(j)"
+    "l = [0,5,9,8,8,6]\n",
+    "l1 = []\n",
+    "n = 2\n",
+    "m = 3\n",
+    "for i in range(m):\n",
+    "    l1.extend([[l[i] for i in range(n)]])\n",
+    "    for j in range(n):\n",
+    "        del l[0]\n",
+    "print(l1)\n"
    ]
   }
  ],
